--- a/src/AppBundle/Resources/views/Cart/home.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home.html.twig
@@ -237,7 +237,9 @@
                                     </div>
                                     <form id="unknownForm" enctype="multipart/form-data">
                                         <div class="modal-body">
+                                            <p>Upload an image:</p>
                                             <input id="unknownImage" type="file" name="file" class="form-control"/>
+                                            <br>
                                             <textarea class="form-control" rows="5"
                                                       id="unknown_item_description" name="description"></textarea>
 
