--- a/src/AppBundle/Resources/views/Admin/home.html.twig
+++ b/src/AppBundle/Resources/views/Admin/home.html.twig
@@ -128,7 +128,7 @@
                     <div class="portlet-body">
                         <div class="table-scrollable">
                             <table class="table table-striped table-bordered table-hover">
-                                {% if submitted %}
+                                {% if submitted_colorhead %}
                                     <thead>
                                     <tr>
                                         <th>
