--- a/app/Resources/views/template/layout.html.twig
+++ b/app/Resources/views/template/layout.html.twig
@@ -110,15 +110,15 @@
                                 </a>
                         </li>
 
-                        {#<li class="{% if app.request.get('_route') == 'view_oustanding_orders' %}active{% endif %}">#}
-                        {#{% if is_granted('ROLE_ADMIN') %}#}
-                        {#<a href="{{ path('view_oustanding_orders') }}">#}
-                        {#{% endif %}#}
+                        <li class="{% if app.request.get('_route') == 'view_oustanding_orders' %}active{% endif %}">
+                            {% if is_granted('ROLE_ADMIN') %}
+                            <a href="{{ path('view_oustanding_orders') }}">
+                                {% endif %}
 
-                        {#<i class="icon-notebook"></i>#}
-                        {#<span class="title">Outstanding Orders</span>#}
-                        {#</a>#}
-                        {#</li>#}
+                                <i class="icon-notebook"></i>
+                                <span class="title">Outstanding Orders</span>
+                            </a>
+                        </li>
 
                         {% if is_granted('ROLE_ADMIN') %}
                             <li class="z {% if app.request.attributes.get('_route') in [
