--- a/app/Resources/views/template/layout.html.twig
+++ b/app/Resources/views/template/layout.html.twig
@@ -116,7 +116,7 @@
                                 {% endif %}
 
                                 <i class="icon-notebook"></i>
-                                <span class="title">Outstanding Orders</span>
+                                <span class="title">Outstanding Parts</span>
                             </a>
                         </li>
 
