--- a/src/AppBundle/Resources/views/Admin/review_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/review_order.html.twig
@@ -164,7 +164,9 @@
                             <button id="btnChangeOrderNumber" class="btn btn-sm btn-info"><i class="fa fa-edit"></i>
                                 Change
                             </button>
-                            <button type="button" class="btn btn-primary" ng-click="addUnknownItem()" style="float: right;">ADD AN UNKNOWN ITEM</button>
+                            <button type="button" class="btn btn-primary" ng-click="addUnknownItem()"
+                                    style="float: right;">ADD UNLISTED ITEM
+                            </button>
                             <br>
                         </div>
 
