--- a/src/AppBundle/Resources/views/Admin/view_outstanding_orders.html.twig
+++ b/src/AppBundle/Resources/views/Admin/view_outstanding_orders.html.twig
@@ -1,12 +1,12 @@
 {% extends ":template:layout.html.twig" %}
 
-{% block title %}All Outstanding Orders{% endblock %}
+{% block title %}All Outstanding Parts{% endblock %}
 {% block page_title %}
-    All Outstanding Orders
+    All Outstanding Parts
 {% endblock page_title %}
 
 {% block page_name %}
-    <i class="fa fa-home"></i> Orders
+    <i class="fa fa-home"></i> Parts
 {% endblock page_name %}
 
 {% block actions %}
