--- a/src/AppBundle/Resources/views/Cart/home.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home.html.twig
@@ -371,8 +371,10 @@
             });
 
             oTable.column( 0 ).visible( false );
+            $('#myInputTextField').val("");
 
             var searchTableQueryField = $('#myInputTextField');
+            oTable.search(this.value).draw();
 
             searchTableQueryField.on('keyup', function (e) {
                 oTable.search(this.value).draw();
