--- a/src/AppBundle/Resources/views/Admin/view_outstanding_orders.html.twig
+++ b/src/AppBundle/Resources/views/Admin/view_outstanding_orders.html.twig
@@ -24,7 +24,7 @@
                 </div>
                 <div class="portlet-body">
                     <div class="table-scrollable">
-                        <table id="part-table" class="table table-striped table-bordered table-hover">
+                        <table class="table table-striped table-bordered table-hover">
                             {% if parts_needing_return %}
                                 <thead>
                                 <tr>
@@ -74,6 +74,7 @@
                                         </td>
                                         <td>
                                             {{ item.description }}
+                                            {{ item.description2 }}
                                         </td>
                                         <td>
                                             {{ item.stock_number }}
@@ -157,6 +158,7 @@
                                         <td>{{ item.return_ship_date | date('m/d/y') }}</td>
                                         <td>
                                             {{ item.description }}
+                                            {{ item.description2 }}
                                         </td>
                                         <td>
                                             {{ item.stock_number }}
