--- a/src/AppBundle/Resources/views/Admin/home.html.twig
+++ b/src/AppBundle/Resources/views/Admin/home.html.twig
@@ -374,10 +374,7 @@
                                             OFFICE
                                         </th>
                                         <th>
-                                            BACK ORDERED ITEMS
-                                        </th>
-                                        <th>
-                                            SHIPPED ITEMS
+                                            BACK ORDERED ITEMS TO SHIP
                                         </th>
                                         <th>
                                             ORDER #
@@ -399,9 +396,6 @@
                                                 <center>
                                                     {{ item.bo_quan }}
                                                 </center>
-                                            </td>
-                                            <td>
-                                                <center>{{ item.bo_ship }}</center>
                                             </td>
                                             <td>
                                                 <center>{{ item.order_number }}</center>
